--- a/bin/src/main/resources/application-mysql.properties
+++ b/bin/src/main/resources/application-mysql.properties
@@ -5,4 +5,4 @@ spring.datasource.username=apibackend
 spring.datasource.password=apibackend
 # SQL is written to be idempotent so this is safe
 spring.datasource.initialization-mode=always
-spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
