Entidades Empleado y Cliente, arreglada herencia con User

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ database=mysql
 #spring.datasource.data=classpath*:db/hsqldb/data.sql
 spring.h2.console.enabled=false
 # JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
