--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,7 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/apibackend_test
+#spring.datasource.data=classpath*:db/hsqldb/data.sql
 spring.datasource.username=root
 spring.datasource.password=root
 pring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
