--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,13 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/apibackend
-spring.datasource.username=apibackend
-spring.datasource.password=apibackend
+spring.datasource.username=root
+spring.datasource.password=root
 # SQL is written to be idempotent so this is safe
 spring.datasource.initialization-mode=always
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+#jwt properties
+app.jwt-secret = JWTSecretKey
+app.jwt-expiration-milliseconds = 604800000
